--- a/app/package.json
+++ b/app/package.json
@@ -11,17 +11,23 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.3",
     "@mui/material": "^5.0.6",
     "@mui/styled-engine-sc": "^5.0.4",
+    "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "clsx": "^1.1.1",
+    "cors": "^2.8.5",
     "motion-style": "^4.2.2",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-calendar": "^3.5.0",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.18.1",
     "react-native-paper": "^4.9.2",
     "react-switch": "^6.0.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "7.32.0",
