--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.6",
     "@mui/styled-engine-sc": "^5.0.4",
+    "axios": "^0.24.0",
     "clsx": "^1.1.1",
     "motion-style": "^4.2.2",
     "next": "12.0.1",
