--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.24.0",
     "clsx": "^1.1.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "motion-style": "^4.2.2",
     "next": "12.0.1",
     "react": "17.0.2",
@@ -27,9 +28,9 @@
     "react-native-paper": "^4.9.2",
     "react-scroll": "^1.8.4",
     "react-switch": "^6.0.0",
+    "scrollable-component": "^1.1.2",
     "styled-components": "^5.3.3",
-    "yup": "^0.32.11",
-    "scrollable-component": "^1.1.2"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "7.32.0",
